--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 300px;
+  width: 280px;
+  height: 100px;
   padding: 10px;
 
   border: 1px solid black;
